--- a/styles.css
+++ b/styles.css
@@ -81,20 +81,18 @@ font-size: 2rem;
 
 }
 
-.button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
+.button {
+    display: inline-block;
+    text-align: center;
     padding: 10px 20px;
-    height: 100%;
-    width: 100%;
     border: none;
-    outline: none;
     border-radius: 4px;
     background-color: #f77062;
     color: #fff;
-}
+    cursor: pointer;
+    font-size: 1rem;
+    transition: background 0.3s ease;
+  }
 
 .button:hover{
     background: #4837ff ;
