--- a/styles.css
+++ b/styles.css
@@ -81,18 +81,20 @@ font-size: 2rem;
 
 }
 
-.button {
-    display: inline-block;
-    text-align: center;
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
     padding: 10px 20px;
+    height: 100%;
+    width: 100%;
     border: none;
+    outline: none;
     border-radius: 4px;
     background-color: #f77062;
     color: #fff;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background 0.3s ease;
-  }
+}
 
 .button:hover{
     background: #4837ff ;
@@ -443,4 +445,21 @@ font-size: 2rem;
     height: auto;
     border-radius: 8px;
     object-fit: cover;
+  }
+
+  .contact__link {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #f77062;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 1rem;
+    transition: background 0.3s ease;
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .contact__link:hover {
+    background-color: #4837ff;
   }
