--- a/styles.css
+++ b/styles.css
@@ -463,3 +463,38 @@ font-size: 2rem;
   .contact__link:hover {
     background-color: #4837ff;
   }
+  .locations__link {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #f77062;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 1rem;
+    transition: background 0.3s ease;
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .locations__link:hover {
+    background-color: #4837ff;
+  }
+
+  .category {
+    background-color: #f77062;
+    color: white;
+    padding: 1rem 2rem;
+    border-radius: 8px;
+    font-weight: bold;
+    min-width: 150px;
+    text-align: center;
+    text-transform: uppercase;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+  }
+  
+  .category:hover {
+    background-color: #4837ff;
+    transform: scale(1.05);
+  }
