--- a/styles.css
+++ b/styles.css
@@ -498,3 +498,17 @@ font-size: 2rem;
     background-color: #4837ff;
     transform: scale(1.05);
   }
+
+  .custom-link {
+    display: inline-block;
+    margin-top: 30px;
+    text-decoration: none;
+    font-weight: 500;
+    color: #f77062;
+    transition: color 0.3s ease, transform 0.2s ease;
+  }
+  
+  .custom-link:hover {
+    color: #4837ff;
+    transform: translateY(-2px);
+  }
